pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constLocalProperty.pkl
foo {
  res1 = 15
  const local qux = res1
  res2 = qux
}
